--- a/docs/sections/introduccion/introduccion.tex
+++ b/docs/sections/introduccion/introduccion.tex
@@ -1,14 +1,9 @@
 \section{Introducción}
+La minería ilegal representa una de las amenazas ambientales más críticas para la Amazonía colombiana. Sus impactos abarcan desde la deforestación acelerada hasta la contaminación de cuerpos hídricos por metales pesados como el mercurio, afectando no solo la biodiversidad, sino también la salud humana y la seguridad territorial. En respuesta a esta problemática, la Fuerza Aeroespacial Colombiana (FAC), en colaboración con la Universidad de los Andes, ha impulsado el uso de tecnologías emergentes para fortalecer la vigilancia aérea y la identificación de actividades ilícitas.
 
-\subsection{Objetivo General}
+La vigilancia mediante cámaras térmicas FLIR (Forward-Looking Infrared), instaladas en aeronaves, permite obtener imágenes de alta cobertura geográfica incluso en condiciones de baja visibilidad. No obstante, el análisis manual de estos videos presenta limitaciones operativas, como altos costos de tiempo, fatiga visual y subjetividad en la interpretación. Ante este desafío, las técnicas de aprendizaje profundo (deep learning) y visión por computador se consolidan como herramientas prometedoras para automatizar la detección de elementos indicativos de minería ilegal, como carreteras no pavimentadas y cuerpos de agua, los cuales suelen estar asociados a campamentos mineros clandestinos.
 
-Diseñar y desarrollar un modelo basado en aprendizaje profundo (deep learning) para el procesamiento de imágenes extraídas de videos, para mejorar su calidad, eliminar ruido y automatizar la detección de cuerpos de agua y carreteras no pavimentadas, facilitando así la identificación automática de estos elementos y contribuyendo al reconocimiento de campamentos de minería ilegal.
+Diversos estudios han demostrado la eficacia de estas técnicas en contextos similares. Por ejemplo, Pardini et al. [1] lograron reducir significativamente los falsos positivos en la detección de pistas aéreas ilegales en la Amazonía mediante redes neuronales convolucionales paralelizadas. Ferreira et al. [3], por su parte, aplicaron un enfoque de fusión de datos para la identificación de cultivos ilícitos, alcanzando una precisión del 92.16 \%. En el ámbito de la gestión hídrica, Teixeira et al. 2[2] utilizaron redes neuronales profundas para segmentar embalses en zonas semiáridas de Brasil con un 95 \% de precisión en la métrica de Intersección sobre Unión (IoU). Estos antecedentes respaldan la aplicabilidad de modelos basados en deep learning para abordar problemas complejos de análisis territorial y vigilancia ambiental.
 
-\subsection{Objetivos Específicos}
+En este contexto, el presente trabajo tiene como objetivo general diseñar y desarrollar un modelo basado en aprendizaje profundo para el procesamiento de imágenes extraídas de videos capturados por cámaras FLIR, con el fin de mejorar su calidad, eliminar ruido y automatizar la detección de cuerpos de agua y carreteras no pavimentadas. La finalidad es facilitar la identificación automática de estos elementos y contribuir al reconocimiento de posibles campamentos asociados a la minería ilegal. Para lograrlo, se plantearon los siguientes objetivos específicos: (1) Implementar técnicas de preprocesamiento de imágenes que permitan mejorar la calidad de los fotogramas extraídos de los videos, eliminando ruido y mejorando el contraste, con una reducción mínima del 20 \% en la distorsión visual. (2) Diseñar y entrenar un conjunto de datos etiquetado específicamente para la identificación de carreteras no pavimentadas y cuerpos de agua en imágenes térmicas. (3)Desarrollar un modelo de aprendizaje profundo basado en redes neuronales convolucionales (CNN), utilizando arquitecturas como YOLO y Faster R-CNN, para la detección y clasificación de estos elementos. (4)Evaluar el desempeño de los modelos mediante métricas de detección como mAP\@50 y mAP\@50-95 con el fin de validar su aplicabilidad en escenarios operacionales reales.
 
-\begin{enumerate}
-    \item Implementar técnicas de preprocesamiento de imágenes que permitan mejorar la calidad de los fotogramas extraídos de los videos, eliminando ruido y mejorando el contraste, con una reducción mínima del 20\% en la distorsión de la imagen. 
-    \item Diseñar y entrenar un conjunto de datos etiquetado para la identificación de carreteras no pavimentadas y cuerpos de agua.
-    \item Desarrollar un modelo de aprendizaje profundo basado en redes neuronales convolucionales para la detección y clasificación de carreteras no pavimentadas y cuerpos de agua en videos capturados por cámaras FLIR.
-    \item Evaluar el desempeño del modelo mediante métricas de clasificación como precisión, recall y F1-score, con un umbral mínimo de 80\% en cada una, para validar su aplicabilidad en escenarios reales de detección de minería ilegal.
-\end{enumerate}
